@@ -1,15 +1,28 @@
 package com.implement.recursion;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Queue;
 
 public class SubSetSum {
-	private static void powerSet(int[] nums, int pos, List<Integer> selected,
+	static class Pair{
+		int i;
+		int j;
+		String psf;		
+		
+		public Pair(int i, int j, String psf) {
+			this.i = i;
+			this.j = j;
+			this.psf = psf;
+		}
+	}
+	
+	private static void powerSet(int[] nums, int pos, LinkedList<Integer> selected,
 			List<List<Integer>> result) {
 		if (pos == nums.length) {
 			// add selected elements so far to the result set
-			result.add(new ArrayList<>(selected));
+			result.add(new LinkedList<>(selected));
 			return;
 
 		}
@@ -18,15 +31,15 @@ public class SubSetSum {
 		// select the element and recurse for others
 		selected.add(elem);
 		powerSet(nums, pos + 1, selected, result);
-		selected.remove(selected.size() - 1);
+		selected.removeLast();
 		
 		// do not select the element
 		powerSet(nums, pos + 1, selected, result);
 	}
 
 	public static List<List<Integer>> subsets(int[] nums) {
-		List<List<Integer>> result = new ArrayList<List<Integer>>();
-		List<Integer> selected = new ArrayList<>();
+		List<List<Integer>> result = new LinkedList<List<Integer>>();
+		LinkedList<Integer> selected = new LinkedList<>();
 
 		//result.add(new ArrayList<>()); // Empty set
 
@@ -36,10 +49,10 @@ public class SubSetSum {
 	}
 
 	private static void uniqueSubsets(int[] nums, int pos,
-			List<Integer> selected, List<List<Integer>> result, boolean include) {
+			LinkedList<Integer> selected, List<List<Integer>> result, boolean include) {
 		if (pos == nums.length) {
 			// add selected elements so far to the result set
-			result.add(new ArrayList<>(selected));
+			result.add(new LinkedList<>(selected));
 			return;
 		}
 
@@ -51,8 +64,8 @@ public class SubSetSum {
 			selected.add(elem);
 
 			uniqueSubsets(nums, pos + 1, selected, result, true);
-
-			selected.remove(selected.size() - 1);
+			
+			selected.removeLast();
 		}
 
 		// do not select the element
@@ -64,8 +77,8 @@ public class SubSetSum {
 	 * return all possible subsets
 	 */
 	public static List<List<Integer>> uniqueSubsets(int[] nums) {
-		List<List<Integer>> result = new ArrayList<List<Integer>>();
-		List<Integer> selected = new ArrayList<>();
+		List<List<Integer>> result = new LinkedList<List<Integer>>();
+		LinkedList<Integer> selected = new LinkedList<>();
 
 		Arrays.sort(nums);
 
@@ -74,10 +87,10 @@ public class SubSetSum {
 		return result;
 	}
 	
-	private static void comboOfSizeK(int[] nums, int pos, List<Integer> selected,
+	private static void comboOfSizeK(int[] nums, int pos, LinkedList<Integer> selected,
 			List<List<Integer>> result, int k) {
 		if(selected.size() == k){
-			result.add(new ArrayList<>(selected));
+			result.add(new LinkedList<>(selected));
 			return;
 		}
 		
@@ -91,25 +104,25 @@ public class SubSetSum {
 		// select the element and recurse for others
 		selected.add(elem);
 		comboOfSizeK(nums, pos + 1, selected, result, k);
-		selected.remove(selected.size() - 1);
+		selected.removeLast();
 		
 		// do not select the element
 		comboOfSizeK(nums, pos + 1, selected, result, k);
 	}
 	
 	public static List<List<Integer>> subsetsSizeK(int[] nums, int k) {
-		List<List<Integer>> result = new ArrayList<List<Integer>>();
-		List<Integer> selected = new ArrayList<>();
+		List<List<Integer>> result = new LinkedList<List<Integer>>();
+		LinkedList<Integer> selected = new LinkedList<>();
 		
 		comboOfSizeK(nums, 0, selected, result, k);
 
 		return result;
 	}
 	
-	private static void subsetsWithTargetSum(int[] nums, int pos, List<Integer> selected,
+	private static void subsetsWithTargetSum(int[] nums, int pos, LinkedList<Integer> selected,
 			List<List<Integer>> result, int target) {		
 		if(target == 0){
-			result.add(new ArrayList<>(selected));
+			result.add(new LinkedList<>(selected));
 			return;
 		}
 		
@@ -124,7 +137,7 @@ public class SubSetSum {
 			// select the element and recurse for others
 			selected.add(elem);
 			subsetsWithTargetSum(nums, pos + 1, selected, result, target - elem);
-			selected.remove(selected.size() - 1);
+			selected.removeLast();
 		}
 		
 		// do not select the element
@@ -132,8 +145,8 @@ public class SubSetSum {
 	}
 
 	public static List<List<Integer>> subsetsWithTargetSum(int[] nums, int target) {
-		List<List<Integer>> result = new ArrayList<List<Integer>>();
-		List<Integer> selected = new ArrayList<>();
+		List<List<Integer>> result = new LinkedList<List<Integer>>();
+		LinkedList<Integer> selected = new LinkedList<>();
 		
 		subsetsWithTargetSum(nums, 0, selected, result, target);
 
@@ -179,7 +192,7 @@ public class SubSetSum {
 	}
 	
 
-	// Iterative DP
+	// Iterative DP: Approach 1
 	public static int countCombinationsBoundedIterative(int[] A, int tgtSum) {
 		int n = A.length;
 		int cache[][] = new int[n + 1][tgtSum + 1];
@@ -205,6 +218,77 @@ public class SubSetSum {
 		}
 
 		return cache[n][tgtSum];
+	}
+	
+	// // Iterative DP: Approach 2 (Unique combinations)
+	static long makeChangeUniqueCombo(int[] coins, int A) {
+		long[] dp = new long[A + 1];
+		dp[0] = 1;
+
+		for (int coin : coins) {
+			for (int amt = coin; amt < dp.length; amt++) {
+				dp[amt] = dp[amt] + dp[amt - coin];
+			}
+
+		}
+
+		return dp[A];
+	}
+
+	public static void printSubsetsWithTargetSum(int[] A, int tgtSum) {
+		int n = A.length;
+		boolean dp[][] = new boolean[n + 1][tgtSum + 1];
+
+		// When n = 0, no items to choose from, count = 0 except for 1st cell
+		for (int j = 1; j < dp[0].length; j++) {
+			dp[0][j] = false;
+		}
+
+		// When Target = 0, One way to achieve it is empty subset
+		for (int i = 0; i < dp.length; i++) {
+			dp[i][0] = true;
+		}
+
+		for (int i = 1; i < dp.length; i++) {
+			for (int j = 1; j < dp[0].length; j++) {
+				if (j >= A[i - 1]) {
+					dp[i][j] = dp[i - 1][j - A[i - 1]] || dp[i - 1][j];
+				} else {
+					dp[i][j] = dp[i - 1][j];
+				}
+			}
+		}
+
+		System.out.println(dp[n][tgtSum]);
+		
+		System.out.println("Printing their indexes: ");
+		
+		Queue<Pair> queue = new LinkedList<>();
+		queue.add(new Pair(n, tgtSum, ""));
+		
+		Pair rem = null;
+		while(queue.size() > 0){
+			rem = queue.poll();
+			
+			if(rem.i == 0 || rem.j == 0){
+				System.out.println(rem.psf);
+			}else{
+				// Include
+				if(rem.j >= A[rem.i - 1]){
+					boolean inc = dp[rem.i - 1][rem.j - A[rem.i - 1]];
+					
+					if(inc == true){
+						queue.add(new Pair(rem.i - 1, rem.j - A[rem.i - 1], (rem.i - 1) + " " + rem.psf));
+					}
+				}
+				
+				boolean exc = dp[rem.i - 1][rem.j];
+				if(exc == true){
+					// Exclude and do not print corresponding index
+					queue.add(new Pair(rem.i - 1, rem.j, rem.psf));
+				}
+			}
+		}
 	}
 	
 	private static int ks_CountSubsetUnboundedAndUniqueMemo(int[] nums, int pos, 
@@ -244,6 +328,7 @@ public class SubSetSum {
 		return ks_CountSubsetUnboundedAndUniqueMemo(nums, 0, tgtSum, cache);
 	}
 	
+	// Number of ways to reach a given target
 	static long countCombinationsUnboundedAndUniqueIter(int[] nums, int target) {
 		long[] dp = new long[target + 1];
 		dp[0] = 1;
@@ -323,6 +408,8 @@ public class SubSetSum {
 		nums = new int[] { 4, 11, 5, 10, 6, 20, 1 };
 		int tgtSum = 21;
 		
+		System.out.println("Given array: " + Arrays.toString(nums));
+		
 		result = subsetsWithTargetSum(nums, tgtSum);
 		System.out.println(result);
 
@@ -330,6 +417,10 @@ public class SubSetSum {
 						+ countSubsetsWithTargetSumMemo(nums, tgtSum));
 		System.out.println(" Number of ways to reach target (Iterative DP): "
 						+ countCombinationsBoundedIterative(nums, tgtSum));
+		
+		System.out.println("Subsets using iterative DP");
+		
+		printSubsetsWithTargetSum(nums, tgtSum);
 
 		System.out.println("\n==========================");
 
